# junstock

./: .gitignore  Dockerfile  README.md  core_data2.json  docker-compose.yml  locustfile.py  main.py  pyproject.toml  requirements.txt  sites-enabled
config/: __init__.py  celery.py  settings.py  urls.py
core/: context_processors.py  urls.py  views.py
core/templatetags/: sorting_tags.py
static/css/: charts.css  navbar.css  screener.css  styles.css  treemap.css
static/js/: bundle.js  indexChart.js  stockDetail.js  test.js  treemap.js
stocks/: admin.py  dashboard_views.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
stocks/migrations/: 0001_initial.py  0002_dailymarketreport_stockdailyanalysis.py  0003_populate_financial_items.py  0004_alter_stock_change_percent_alter_stock_code_and_more.py  0005_stockpricehistory.py  0006_financialstatement.py  0007_alter_stock_options_remove_stock_city_and_more.py  0008_alter_financialitem_options_financialitem_order_and_more.py  0009_industryfinancialaverage.py  0010_technicalindicator.py  0011_predictionlog.py
stocks/pytorch_trained_model/: predict.py  sac_predictor.py
templates/: base.html  nav.html
templates/account/: login.html  logout.html  signup.html
templates/core/: dashboard.html  home.html  screener.html  stock_detail.html  test.html
templates/emails/: daily_report.html
templates/partials/: pagination.html  results_card.html
users/: admin.py  forms.py  models.py  utils.py
users/migrations/: 0001_initial.py  0002_blockeddomains.py
(+16 files in other folders)
